# exercism

rust/: .gitignore  Cargo.toml
rust/acronym/src/: lib.rs
rust/all-your-base/src/: lib.rs
rust/allergies/src/: lib.rs
rust/armstrong-numbers/src/: lib.rs
rust/atbash-cipher/src/: lib.rs
rust/beer-song/src/: lib.rs
rust/bob/src/: lib.rs
rust/bowling/src/: lib.rs
rust/custom-set/src/: lib.rs
rust/difference-of-squares/src/: lib.rs
rust/etl/src/: lib.rs
rust/gigasecond/src/: lib.rs
rust/grade-school/src/: lib.rs
rust/grains/src/: lib.rs
rust/hamming/src/: lib.rs
rust/largest-series-product/src/: lib.rs
rust/luhn-from/src/: lib.rs
rust/luhn-trait/src/: lib.rs
rust/luhn/src/: lib.rs
rust/matching-brackets/: Cargo.toml
rust/matching-brackets/src/: lib.rs
rust/nth-prime/src/: lib.rs
rust/nucleotide-count/src/: lib.rs
rust/pangram/src/: lib.rs
rust/pascals-triangle/src/: lib.rs
rust/phone-number/src/: lib.rs
rust/prime-factors/src/: lib.rs
rust/proverb/src/: lib.rs
rust/queen-attack/src/: lib.rs
rust/raindrops/src/: lib.rs
rust/rna-transcription/src/: lib.rs
rust/rna-transcription/tests/: rna-transcription.rs
rust/robot-simulator/src/: lib.rs
rust/roman-numerals/src/: lib.rs
rust/rotational-cipher/src/: lib.rs
rust/run-length-encoding/src/: lib.rs
rust/say/src/: lib.rs
rust/scrabble-score/src/: lib.rs
rust/sieve/src/: lib.rs
rust/space-age/src/: lib.rs
rust/sublist/src/: lib.rs
rust/sum-of-multiples/src/: lib.rs
rust/tournament/src/: lib.rs
rust/triangle/src/: lib.rs
rust/wordy/: Cargo.toml
(+59 files in other folders)
