[workspace]
members = [
	"hello-world",
	"leap",
	"raindrops",
	"beer-song",
	"proverb",
	"difference-of-squares",
	"sum-of-multiples",
	"grains",
	"prime-factors",
	"gigasecond",
	"bob",
	"matching-brackets",
	"pascals-triangle",
	"nucleotide-count",
	"etl",
	"acronym",
	"sieve",
	"rna-transcription",
	"triangle",
	"grade-school",
	"robot-simulator",
	"queen-attack",
	"bowling",
	"tournament",
	"say",
	"run-length-encoding",
	"hamming",
	"scrabble-score",
	"pangram",
	"all-your-base",
	"allergies",
	"variable-length-quantity",
	"atbash-cipher",
	"rotational-cipher",
	"space-age",
	"wordy",
	"sublist",
	"custom-set",
	"luhn",
	"luhn-from",
	"luhn-trait",
	"largest-series-product",
	"word-count",
	"phone-number",
	"roman-numerals",
	"nth-prime",
	"armstrong-numbers"
]
